--- a/public/index.html
+++ b/public/index.html
@@ -199,6 +199,25 @@
 			</div>
 		</div>
 		<script src="js/main.js"></script>
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+
+		<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+		<script>
+			// Your web app's Firebase configuration
+			var firebaseConfig = {
+				apiKey: 'AIzaSyC3KKbMoO5P41mSLsJJFK2g0DWlNOfUXo8',
+				authDomain: 'hulu-webpage-clone.firebaseapp.com',
+				projectId: 'hulu-webpage-clone',
+				storageBucket: 'hulu-webpage-clone.appspot.com',
+				messagingSenderId: '958625025296',
+				appId: '1:958625025296:web:3604d7ca3c0256c5052995',
+			};
+			// Initialize Firebase
+			firebase.initializeApp(firebaseConfig);
+		</script>
 	</body>
 </html>
 s
